logout dan file fcm
