# controllers/auth/cont_auth.go
@@ -33,7 +33,6 @@ func NewContAuth(e *echo.Echo, useAuth iauth.Usecase) {
 
 	// e.POST("/capster/auth/register", cont.Register)
 	e.GET("/swagger/*", echoSwagger.WrapHandler)
-	e.GET("/health_check", cont.Health)
 	r := e.Group("/capster/auth")
 	r.Use(midd.Versioning)
 	r.POST("/login", cont.Login)
@@ -41,10 +40,43 @@ func NewContAuth(e *echo.Echo, useAuth iauth.Usecase) {
 	r.POST("/change_password", cont.ChangePassword)
 	r.POST("/verify", cont.Verify)
 	r.POST("/register", cont.Register)
+
+	L := e.Group("/capster/auth/logout")
+	L.Use(midd.JWT)
+	L.Use(midd.Versioning)
+	L.POST("", cont.Logout)
 }
 
-func (u *ContAuth) Health(e echo.Context) error {
-	return e.JSON(http.StatusOK, "success")
+// Logout :
+// @Summary logout
+// @Security ApiKeyAuth
+// @Tags Auth
+// @Produce json
+// @Param OS header string true "OS Device"
+// @Param Version header string true "OS Device"
+// @Success 200 {object} tool.ResponseModel
+// @Router /capster/auth/logout [post]
+func (u *ContAuth) Logout(e echo.Context) error {
+	ctx := e.Request().Context()
+	if ctx == nil {
+		ctx = context.Background()
+	}
+
+	var (
+		appE = tool.Res{R: e} // wajib
+	)
+
+	claims, err := app.GetClaims(e)
+	if err != nil {
+		return appE.Response(http.StatusBadRequest, fmt.Sprintf("%v", err), nil)
+	}
+	Token := e.Request().Header.Get("Authorization")
+	err = u.useAuth.Logout(ctx, claims, Token)
+	if err != nil {
+		return appE.ResponseError(http.StatusUnauthorized, fmt.Sprintf("%v", err), nil)
+	}
+
+	return appE.Response(http.StatusOK, "Ok", nil)
 }
 
 // Login :
